add command for cancelling runs
