# dlt/_workspace/runtime_clients/api/openapi.yaml
@@ -2930,6 +2930,132 @@ paths:
       summary: GetRun
       tags:
       - runs
+  /v1/workspaces/{workspace_id}/runs/{run_id}/cancel:
+    post:
+      deprecated: false
+      description: '
+
+        Cancels a run for a workspace by ID.
+
+
+        Requires WRITE permission on the organization level.
+
+        '
+      operationId: cancel_run
+      parameters:
+      - deprecated: false
+        in: path
+        name: workspace_id
+        required: true
+        schema:
+          format: uuid
+          type: string
+      - deprecated: false
+        in: path
+        name: run_id
+        required: true
+        schema:
+          format: uuid
+          type: string
+      responses:
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DetailedRunResponse'
+          description: Document created, URL follows
+          headers: {}
+        '400':
+          content:
+            application/json:
+              schema:
+                description: Validation Exception
+                examples:
+                - detail: Bad Request
+                  extra: {}
+                  status_code: 400
+                properties:
+                  detail:
+                    type: string
+                  extra:
+                    additionalProperties: {}
+                    type: object
+                  status_code:
+                    type: integer
+                required:
+                - detail
+                - status_code
+                type: object
+          description: Bad request syntax or unsupported method
+        '401':
+          content:
+            application/json:
+              schema:
+                description: Not Authorized Exception
+                examples:
+                - detail: Unauthorized
+                  extra: {}
+                  status_code: 401
+                properties:
+                  detail:
+                    type: string
+                  extra:
+                    additionalProperties: {}
+                    type: object
+                  status_code:
+                    type: integer
+                required:
+                - detail
+                - status_code
+                type: object
+          description: No permission -- see authorization schemes
+        '403':
+          content:
+            application/json:
+              schema:
+                description: Entity Permission Denied Exception
+                examples:
+                - detail: Forbidden
+                  extra: {}
+                  status_code: 403
+                properties:
+                  detail:
+                    type: string
+                  extra:
+                    additionalProperties: {}
+                    type: object
+                  status_code:
+                    type: integer
+                required:
+                - detail
+                - status_code
+                type: object
+          description: Request forbidden -- authorization will not help
+        '404':
+          content:
+            application/json:
+              schema:
+                description: Entity Not Found Exception
+                examples:
+                - detail: Not Found
+                  extra: {}
+                  status_code: 404
+                properties:
+                  detail:
+                    type: string
+                  extra:
+                    additionalProperties: {}
+                    type: object
+                  status_code:
+                    type: integer
+                required:
+                - detail
+                - status_code
+                type: object
+          description: Nothing matches the given URI
+      summary: CancelRun
+      tags:
+      - runs
   /v1/workspaces/{workspace_id}/runs/{run_id}/logs:
     get:
       deprecated: false
